--- a/.github/workflows/basket_craft_extract_load_raw.yml
+++ b/.github/workflows/basket_craft_extract_load_raw.yml
@@ -2,8 +2,8 @@ name: Run Basket Craft Extract and Load to Raw
 
 on:
   schedule:
-    - cron: '*/15 * * * *' # runs every 15 minutes
-  workflow_dispatch:       # optional manual trigger
+    - cron: '*/15 * * * *'  # runs every 15 minutes
+  workflow_dispatch:         # optional manual trigger
 
 env:
   MYSQL_USER:    ${{ secrets.MYSQL_USER }}
@@ -23,12 +23,12 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-      
+
       - name: Set up python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      
+
       - name: Install python dependencies
         run: |
           pip install -r requirements.txt
@@ -40,4 +40,7 @@ jobs:
       - name: Extract and load orders to raw schema 
         run: |
           python elt/basket_craft_orders_extract_load_raw.py
- 
+
+      - name: Extract and load website_sessions to raw schema 
+        run: |
+          python elt/basket_craft_website_sessions_extract_load_raw.py
